2000-07-05  Ales Hvezda  <ahvezda@geda.seul.org>

	* scheme/gnet-bae.scm, scheme/gnet-pads.scm, scheme/gnet-protelII.scm:
	  These files still referenced the "physical" attribute, when instead
	  it should be "footprint"

	* src/s_traverse.c: Because of my overloading of the "label=" attribute
	  it was possible for a pin to supply a label to net, which is a big
	  no-no (bug). Fixed by checking to make sure object is not a pin.

2000-07-04  Ales Hvezda  <ahvezda@geda.seul.org>

        * src/*.c: Updated copyright info in each file

        * src/*.c: Changed all GNU to GPL in the appropriate places

	* configure.in: Bumped version up to 20000704
	
	* src/g_rc.c: Added an #if around #include <dirent.h> to make 	
	  Cygwin builds work

	* tests/test_verilog.verilog, tests/7447.verilog: Updated to reflect 
	  new backend revision (must not have done it right the last time)

	* src/*.c: Fixed all warnings	

2000-06-27  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/g_rc.c, src/g_register.c: Added component-library-search and
          source-library-search rc keywords

	* tests/test_verilog.verilog, tests/7447.verilog: Updated to reflect 
	  new backend revision

	* configure.in: Put in checks for gtk+ and glib 1.2.3

2000-06-15  Matt Ettus  <matt@ettus.com>

	* Added scheme/gnet-pads.scm by Roger

2000-06-11  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/parsecmd.c: Added the -c flag which allows you to execute
	  arbitrary strings from the command line

	* src/gnetlist.1: Update the manual page for above

2000-06-04  Ales Hvezda  <ahvezda@geda.seul.org>

	* tests/*.verilog: Updated baseline verilog tests cases to take into
	  account latest test_verilog.sch and 7447.sch

2000-06-01  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/s_project.c: Added init of some important variables which 
	  libgeda uses when promoting attributes.  The attribute promotion
	  code is almost completely disabled through these defaults
